# CodeCustodian

./: .codecustodian.yml  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DemoPrep.md  Dockerfile  E2E_DEMO_TEST_PLAN.md  README.md  SECURITY.md  mcp.json  pyproject.toml  roi-report-test.html  ruff.toml  test_collect.txt  test_full_run.txt  test_output.txt  test_results2.txt  test_results_final.txt  test_results_models.txt  test_venv_e2e.txt  test_venv_workflow.txt
.copilot_skills/api-migration/: SKILL.md
.copilot_skills/chatops-delivery/: SKILL.md
.copilot_skills/code-quality/: SKILL.md
.copilot_skills/debt-forecasting/: SKILL.md
.copilot_skills/dependency-management/: SKILL.md
.copilot_skills/framework-migrations/: SKILL.md
.copilot_skills/general-refactoring/: SKILL.md
.copilot_skills/live-dependency-intelligence/: SKILL.md
.copilot_skills/python-typing/: SKILL.md
.copilot_skills/reachability-analysis/: SKILL.md
.copilot_skills/security-remediation/: SKILL.md
.copilot_skills/test-synthesis/: SKILL.md
.copilot_skills/todo-resolution/: SKILL.md
.github/workflows/: ci-self-heal.yml  ci.yml  codecustodian.yml  deploy-azure.yml  pr-review-bot.yml  security-scan.yml
Docs/: ARCHITECTURE.md  BUSINESS_VALUE.md  COMPETITIVE_FEATURES.md  DEPLOYMENT.md  FEATURE_ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  RESPONSIBLE_AI.md  TOOLS_AND_USAGE.md  UX_DEMO_STRATEGY.md
Docs/Requirements/: BugImprovements.md  CodeCustodian_BRD.md  Contestant - GitHub Copilot SDK Enterprise Challenge.docx  business-requirements.md  features-requirements-challenge-optimized.md  features-requirements.md  implementation-plan.md
customer/: testimonial.md
demo/sample-enterprise-app/: .codecustodian.yml  pyproject.toml
feedback/: sdk-feedback.md
infra/: main.bicep  parameters.dev.bicepparam  parameters.prod.bicepparam
infra/modules/: acr.bicep  alerts.bicep  (+6 more)
presentations/: CodeCustodian-Deck.html  CodeCustodian-Deck.pptx  CodeCustodian-Features.pptx
scripts/: create_deck.py  demo-run.ps1  deploy-to-azure.sh  generate_pptx.py  generate_summary.py  smoke-mcp-remote.ps1  upload_metrics.py
tests/: conftest.py  test_cli.py  test_config.py  test_enterprise.py  test_exceptions.py  test_executor.py  test_executor_additional.py  test_executor_edge_cases.py  test_feedback_intelligence.py  test_forecasting.py  test_github_integration.py  test_integrations.py  test_live_pypi.py  test_logging.py  test_mcp_resources_prompts.py  test_mcp_server.py  test_models.py  test_new_features.py  test_observability.py  test_onboarding.py  test_phase10_v015.py  test_phase7_enterprise.py  test_phase8_intelligence.py  test_phase9_security.py  test_pipeline.py  test_planner.py  test_policies.py  test_reachability.py  test_repo_cloner.py  test_scanners.py  test_skills_agents.py  test_verifier.py  test_workflows.py
(+106 files in other folders)
